--- a/index.html
+++ b/index.html
@@ -102,16 +102,9 @@
           </div>
           <img src="./images/card-3.png" alt="" />
         </div>
-        <!-- card-3
-        <div class="card-3">
-          <div class="card-content">
-            <h2 class="card-title">Maldives</h2>
-            <p class="card-description">02 Tours | 21 Activities | 17 Hotels</p>
-          </div>
-          <img src="./images/card-1.jpg" alt="" />
-        </div> -->
       </div>
     </section>
+    <!-- popular-tours -->
     <section>
       <div class="title">
         <div class="title-txt">
@@ -166,7 +159,7 @@
           </div>
         </div>
         <!-- niagra-falls -->
-        <div class="card-niagra">
+        <div class="card-itly">
           <div class="card-content">
             <div class="icons">
               <div class="days">
@@ -188,5 +181,190 @@
         </div>
       </div>
     </section>
+    <!-- tour-type -->
+    <section>
+      <div class="tour-type">
+        <img src="./images/tour-type.jpg" alt="" />
+        <div class="tour-type-txt">
+          <p>Find a tour by</p>
+          <h1>Tour Type</h1>
+        </div>
+
+        <div class="adventure-icons">
+          <div class="component">
+            <li><img src="./images/Untitled.png" alt="" /></li>
+            <p>AIR RIDES</p>
+          </div>
+          <div class="component">
+            <li><img src="./images/png.png" alt="" /></li>
+            <p>HIKING</p>
+          </div>
+          <div class="component">
+            <li><img src="./images/mdi_foot-print.png" alt="" /></li>
+            <p>WALKING</p>
+          </div>
+          <li>
+            <div class="component">
+              <img
+                src="./images/material-symbols_sports-basketball-outline.png"
+                alt=""
+              />
+              <p>SPORTS</p>
+            </div>
+          </li>
+        </div>
+      </div>
+    </section>
+    <!-- latest-blogs -->
+    <section>
+      <div class="dest-background">
+        <div class="title">
+          <div class="title-txt">
+            <p>Watch Our Latest</p>
+          </div>
+          <div class="sub-txt">
+            <p>Blogs</p>
+          </div>
+        </div>
+        <!-- CARD -->
+        <div class="blog-card">
+          <div class="blog-card-1">
+            <div class="blog-card-img">
+              <img src="./images/blog-1.jpg" alt="" />
+            </div>
+            <div class="blog-card-content">
+              <div class="title-head">
+                <p>Rishi</p>
+                <p>2023-03-15</p>
+              </div>
+              <h2 class="card-title">
+                Why do people travel? find the top reasons!
+              </h2>
+              <div class="view">
+                <p class="card-description">View Full Vlog</p>
+                <i class="ri-arrow-right-line"></i>
+              </div>
+            </div>
+          </div>
+
+          <div class="blog-card-2">
+            <div class="blog-card-img">
+              <img src="./images/blog-2.jpg" alt="" />
+            </div>
+            <div class="blog-card-content">
+              <div class="title-head">
+                <p>Aayu</p>
+                <p>2023-03-15</p>
+              </div>
+              <h2 class="card-title">
+                Mountains In Nepal: Mt. Everest Mt. Manaslu, Mt.Annapurna!
+              </h2>
+              <div class="view">
+                <p class="card-description">View Full Vlog</p>
+                <i class="ri-arrow-right-line"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- tour-review -->
+    <section>
+      <div class="tour-review">
+        <div class="title">
+          <div class="title-txt">
+            <p>Tour Review</p>
+          </div>
+          <div class="sub-txt">
+            <p>Our Happy Clients</p>
+          </div>
+        </div>
+        <!-- review-card -->
+        <div class="review-card">
+          <div class="review-card-1">
+            <div class="review-card-content">
+              <div class="stars">
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-half-line"></i>
+              </div>
+              <p class="review-card-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+                voluptatem, adipisci doloribus vitae at quidem architecto
+                commodi praesentium veniam nesciunt temporibus ipsa similique
+                iste et mollitia error odio! Eligendi, qui!
+              </p>
+            </div>
+            <div class="review-img">
+              <img src="./images/muna singh.jpg" alt="" />
+            </div>
+            <div class="img-name">
+              <h4>Anisha Mishra</h4>
+              <p>Customer</p>
+            </div>
+          </div>
+          <div class="review-card-1">
+            <div class="review-card-content">
+              <div class="stars">
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-half-line"></i>
+              </div>
+              <p class="review-card-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+                voluptatem, adipisci doloribus vitae at quidem architecto
+                commodi praesentium veniam nesciunt temporibus ipsa similique
+                iste et mollitia error odio! Eligendi, qui!
+              </p>
+            </div>
+            <div class="review-img">
+              <img src="./images/muna singh.jpg" alt="" />
+            </div>
+            <div class="img-name">
+              <h4>Anisha Mishra</h4>
+              <p>Customer</p>
+            </div>
+          </div>
+
+          <div class="review-card-1">
+            <div class="review-card-content">
+              <div class="stars">
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-s-fill"></i>
+                <i class="ri-star-half-line"></i>
+              </div>
+              <p class="review-card-description">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa
+                voluptatem, adipisci doloribus vitae at quidem architecto
+                commodi praesentium veniam nesciunt temporibus ipsa similique
+                iste et mollitia error odio! Eligendi, qui!
+              </p>
+            </div>
+            <div class="review-img">
+              <img src="./images/muna singh.jpg" alt="" />
+            </div>
+            <div class="img-name">
+              <h4>Anisha Mishra</h4>
+              <p>Customer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- bar -->
+    <div class="bar-bg">
+      <div class="bar">
+        <div class="bar-txt">
+          <h1>Are You Ready To Explore The World</h1>
+          <p>Enter your Details and we’ll send you about our offers.</p>
+        </div>
+        <div class="book-btn">
+        <button>Book Now</button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
