--- a/index.html
+++ b/index.html
@@ -362,9 +362,58 @@
           <p>Enter your Details and we’ll send you about our offers.</p>
         </div>
         <div class="book-btn">
-        <button>Book Now</button>
+          <button>Book Now</button>
         </div>
       </div>
     </div>
+    <!-- footer     -->
+    <section class=" ">
+      <div class="footer">
+        <div class="f-logo">
+          <img src="../images/logo.png" alt="" />
+          <div class="social-media">
+            <h5>Social Media:</h5>
+            <div class="f-icons">
+              <img src="../images/facebook.png" alt="" />
+              <img src="../images/instagram.png" alt="" />
+              <img src="../images/twitter.png" alt="" />
+            </div>
+          </div>
+
+          <div class="quick-links">
+            <ul>
+              <h5>Quick links</h5>
+              <li>Home</li>
+              <li>About us</li>
+              <li>Blogs</li>
+              <li>Services</li>
+              <li>Our Team</li>
+              <li>Contact Us</li>
+            </ul>
+          </div>
+
+          <div class="study-abroad">
+            <ul>
+              <h5>Study Abroad</h5>
+
+              <li>Canada</li>
+              <li>USA</li>
+              <li>Australia</li>
+              <li>UK</li>
+            </ul>
+          </div>
+
+          <div class="details">
+            <ul>
+              <h5>Details</h5>
+              <li>Phone: +44 7501 039710</li>
+              <li>Location: Brewery Road, London, United Kingdom</li>
+              <li>Email: info@secrecrutingagencyuk.com</li>
+              <li>Web: secrecrutingagencyuk.com</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
