--- a/index.html
+++ b/index.html
@@ -367,50 +367,41 @@
       </div>
     </div>
     <!-- footer     -->
-    <section class=" ">
+    <section>
       <div class="footer">
         <div class="f-logo">
           <img src="../images/logo.png" alt="" />
-          <div class="social-media">
-            <h5>Social Media:</h5>
-            <div class="f-icons">
-              <img src="../images/facebook.png" alt="" />
-              <img src="../images/instagram.png" alt="" />
-              <img src="../images/twitter.png" alt="" />
-            </div>
-          </div>
+          <br /><h class="f-text"
+            >Welcome to the best travel agency where you can find tons of tours
+            to any place on Earth.</h
+          >
+        </div>
 
-          <div class="quick-links">
-            <ul>
-              <h5>Quick links</h5>
-              <li>Home</li>
-              <li>About us</li>
-              <li>Blogs</li>
-              <li>Services</li>
-              <li>Our Team</li>
-              <li>Contact Us</li>
-            </ul>
-          </div>
+        <div class="quick-links">
+          <ul>
+            <h3>Quick links</h3>
+            <li>Destination</li>
+            <li>Tour</li>
+            <li>Blog</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
 
-          <div class="study-abroad">
-            <ul>
-              <h5>Study Abroad</h5>
+        <div class="contact">
+          <ul>
+            <h3>Contact</h3>
+            <li>1234 5678 1209</li>
+            <li>mailto:k3tours@gmail.com</li>
+            <li>Bharatpur -10 Chitwan, Nepal</li>
+          </ul>
+        </div>
 
-              <li>Canada</li>
-              <li>USA</li>
-              <li>Australia</li>
-              <li>UK</li>
-            </ul>
-          </div>
-
-          <div class="details">
-            <ul>
-              <h5>Details</h5>
-              <li>Phone: +44 7501 039710</li>
-              <li>Location: Brewery Road, London, United Kingdom</li>
-              <li>Email: info@secrecrutingagencyuk.com</li>
-              <li>Web: secrecrutingagencyuk.com</li>
-            </ul>
+        <div class="newsletter">
+          <h3>Newsletter</h3>
+          <div class="newsletter-contents">
+            <input type="text" placeholder="Email" class="search-box" />
+            <button class="search-button">Search</button>
+            <button class="submit">submit</button>
           </div>
         </div>
       </div>
