--- a/index.html
+++ b/index.html
@@ -405,6 +405,9 @@
           </div>
         </div>
       </div>
+      <div class="f-f">
+      <p >© Copyright 2020 by A&Ptech.</p>
+      </div>
     </section>
   </body>
 </html>
