--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- top-header -->
     <section>
       <div class="top-header">
-        <div class="div1">
+        <div class="div-1">
           <div class="gmail">
             <i class="ri-mail-fill"></i>
             <p>k3tours@gmail.com</p>
@@ -41,11 +41,11 @@
           <img src="./images/logo.png" alt="" />
         </div>
         <div class="nav-contents">
-          <li>Home</li>
-          <li>Destination</li>
-          <li>Tour</li>
-          <li>Blog</li>
-          <li>Contact Us</li>
+          <h>Home</h>
+          <h>Destination</h>
+          <h>Tour</h>
+          <h>Blog</h>
+          <h>Contact Us</h>
           <button>Book Now</button>
         </div>
       </div>
@@ -129,6 +129,7 @@
               </div>
             </div>
             <h2 class="card-title">Italy</h2>
+
             <div class="explore">
               <p class="card-description">Explore More</p>
               <i class="ri-arrow-right-line"></i>
@@ -371,7 +372,8 @@
       <div class="footer">
         <div class="f-logo">
           <img src="../images/logo.png" alt="" />
-          <br /><h class="f-text"
+          <br />
+          <h class="f-text"
             >Welcome to the best travel agency where you can find tons of tours
             to any place on Earth.</h
           >
@@ -390,23 +392,31 @@
         <div class="contact">
           <ul>
             <h3>Contact</h3>
-            <li>1234 5678 1209</li>
-            <li>mailto:k3tours@gmail.com</li>
-            <li>Bharatpur -10 Chitwan, Nepal</li>
+            <div class="c-icon">
+              <i class="ri-phone-fill"></i>
+              <li>1234 5678 1209</li>
+            </div>
+            <div class="c-icon">
+              <i class="ri-mail-fill"></i>
+              <li>mailto:k3tours@gmail.com</li>
+            </div>
+            <div class="c-icon">
+              <i class="ri-map-pin-2-fill"></i>
+              <li>Bharatpur -10 Chitwan, Nepal</li>
+            </div>
           </ul>
         </div>
 
         <div class="newsletter">
           <h3>Newsletter</h3>
-          <div class="newsletter-contents">
-            <input type="text" placeholder="Email" class="search-box" />
-            <button class="search-button">Search</button>
-            <button class="submit">submit</button>
-          </div>
+          <input type="text" placeholder="Email" class="f-mail" />
+          <i class="ri-mail-fill"></i>
+          <button class="submit">submit</button>
         </div>
       </div>
+
       <div class="f-f">
-      <p >© Copyright 2020 by A&Ptech.</p>
+        <p>© Copyright 2020 by A&Ptech.</p>
       </div>
     </section>
   </body>
