--- a/index.html
+++ b/index.html
@@ -140,8 +140,6 @@
         <!-- card-maldives -->
         <div class="card-maldives">
           <div class="card-content">
-            <img src="./images/card-3.png" alt="" />
-
             <div class="icons">
               <div class="days">
                 <i class="ri-time-line"></i>
@@ -152,11 +150,13 @@
                 <p>25</p>
               </div>
             </div>
-            <h2 class="card-title">Maldives</h2>
+            <h2 class="card-title">Italy</h2>
+
             <div class="explore">
               <p class="card-description">Explore More</p>
               <i class="ri-arrow-right-line"></i>
             </div>
+            <img src="./images/card-3.png" alt="" />
           </div>
         </div>
         <!-- niagra-falls -->
