--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
       <!-- nav -->
-      <div class="nav-bar">
+      <nav class="nav-bar">
         <div class="logo">
           <img src="./images/logo.png" alt="" />
         </div>
@@ -46,9 +46,12 @@
           <h>Tour</h>
           <h>Blog</h>
           <h>Contact Us</h>
-          <button>Book Now</button>
+          <button class="btn-nav">Book Now</button>
+          <div class="menu-icon">
+            <i class="ri-menu-line"></i>
+          </div>
         </div>
-      </div>
+      </nav>
     </section>
 
     <!-- MAIN -->
