--- a/index.html
+++ b/index.html
@@ -40,17 +40,18 @@
         <div class="logo">
           <img src="./images/logo.png" alt="" />
         </div>
-        <div class="nav-contents">
-          <h>Home</h>
-          <h>Destination</h>
-          <h>Tour</h>
-          <h>Blog</h>
-          <h>Contact Us</h>
+
+        <ul class="nav-contents">
+          <h class="menus">Home</h>
+          <h class="menus">Destination</h>
+          <h class="menus">Tour</h>
+          <h class="menus">Blog</h>
+          <h class="menus">Contact Us</h>
           <button class="btn-nav">Book Now</button>
           <div class="menu-icon">
             <i class="ri-menu-line"></i>
           </div>
-        </div>
+        </ul>
       </nav>
     </section>
 
